--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -66,7 +66,7 @@
 </div> <!-- container-fluid // -->
 
 <ng-template #noItems>
-  <p>In der ausgewählten Kategorie <strong>{{selectedCategory}}</strong> gits es zur Zeit kleine Produkte.</p>
+  <p>In der ausgewählten Kategorie <strong>{{selectedCategory}}</strong> gits es zur Zeit keine Produkte.</p>
 </ng-template>
 
 <pagination-controls *ngIf="(products$ | async)?.length >0" (pageChange)="p = $event"
