--- a/src/app/product/product-grid/product-grid.component.html
+++ b/src/app/product/product-grid/product-grid.component.html
@@ -45,7 +45,7 @@
 </section>
 
 <ng-template #noItems>
-  <p style="margin: 0 20px">In der ausgewählten Kategorie <span style="font-weight: 700">{{selectedCategory}}</span> gits es zur Zeit kleine Produkte.</p>
+  <p style="margin: 0 20px">In der ausgewählten Kategorie <span style="font-weight: 700">{{selectedCategory}}</span> gits es zur Zeit keine Produkte.</p>
 </ng-template>
 
 <pagination-controls *ngIf="(products$ | async)?.length >0" (pageChange)="p = $event"
