footer styling and content

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,110 +1,150 @@
 <footer class="main-footer">
   <div class="container">
     <div class="row">
-      <div class="footer-sitemap-section col-4 col-lg-3">
-        <h4 class="sitemap-title">CATEGORIES</h4>
+
+
+
+      <div class="footer-sitemap-section col-12 col-sm-6 col-md-3 col-lg-3">
+        <h4 class="sitemap-title">KATEGORIEN</h4>
         <ul class="sitemap-items-list list-unstyled">
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'men']">
-              Men
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+             Computer
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'women']">
-              Women
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+              Fotoapparate
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'kids']" >
-              Kids
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']" >
+             Gartenzubehör
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'outdoors']">
-              Outdoors
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+             Kleider
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'running']">
-              Running
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+             Schuhe
             </a>
           </li>
         </ul>
       </div>
-      <div class="footer-sitemap-section col-4 col-lg-3">
+
+
+
+      <div class="footer-sitemap-section col-12 col-sm-6 col-md-3 col-lg-3">
         <h4 class="sitemap-title">INFO</h4>
         <ul class="sitemap-items-list list-unstyled">
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['/about']">
-              About Us
+            <a class="sitemap-link" tabindex="-1">
+              Über uns
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Careers
+              Geschichte
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Press
+             Dienstleistungen
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Sustainability
+             Sponsoren
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Affiliates
+              Crowdfunding
             </a>
           </li>
         </ul>
       </div>
-      <div class="footer-sitemap-section col-4 col-lg-3">
-        <h4 class="sitemap-title">HELP</h4>
+
+
+      <div class="footer-sitemap-section col-12 col-sm-6 col-md-3 col-lg-3 md-bottomrow">
+        <h4 class="sitemap-title">ZAHLUNG & VERSAND</h4>
         <ul class="sitemap-items-list list-unstyled">
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Order Status
+              Ihr Konto
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Shipping and Delivery
+              Versandarten / Kosten
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Returns
+              Rückerstattung
             </a>
           </li>
           <li class="sitemap-item">
             <a class="sitemap-link" tabindex="-1">
-              Payment Options
+              Gebüren
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1">
-              Contact Us
+            <a class="social-link" href="https://instagram.com" target="_blank" tabindex="-1">
+            test
             </a>
           </li>
         </ul>
       </div>
-      <div class="footer-social-presence col-12 col-lg-3 order-first order-lg-last">
-        <a class="social-link" href="https://instagram.com" target="_blank" tabindex="-1">
-          <span class="fa fa-instagram"></span>
+
+
+
+
+      <div class="footer-sitemap-section col-12 col-sm-6 col-md-3 col-lg-3 md-bottomrow">
+        <h4 class="sitemap-title">KONTAKT</h4>
+        <ul class="sitemap-items-list list-unstyled">
+
+        <li class="sitemap-item">
+          <a class="sitemap-link" tabindex="-1">
+            +41 0794795169
+          </a>
+        </li>
+
+
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" href="mailto:mabrweb@gmail.com">
+              mabrweb@gmail.com
+            </a>
+          </li>
+
+        </ul>
+
+        <ul class="list-unstyled list-inline text-center mt-2 float-left">
+        <a href="https://instagram.com" target="_blank" tabindex="-1" class="sitemap-link">
+          <fa name="instagram mr-2" size="2x"></fa>
         </a>
-        <a class="social-link" href="https://youtube.com" target="_blank" tabindex="-1">
-          <span class="fa fa-youtube-play"></span>
+        <a href="https://youtube.com" target="_blank" tabindex="-1" class="sitemap-link">
+          <fa name="twitter mr-2" size="2x"></fa>
         </a>
-        <a class="social-link" href="https://twitter.com" target="_blank" tabindex="-1">
-          <span class="fa fa-twitter"></span>
+        <a href="https://twitter.com" target="_blank" tabindex="-1" class="sitemap-link">
+          <fa name="google mr-2" size="2x"></fa>
         </a>
-        <a class="social-link" href="https://facebook.com" target="_blank" tabindex="-1">
-          <span class="fa fa-facebook"></span>
+        <a href="https://facebook.com" target="_blank" tabindex="-1" class="sitemap-link">
+          <fa name="facebook mr-2" size="2x"></fa>
         </a>
+        </ul>
+
       </div>
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3"><span>© All rights reserved. Made with  <fa name="heart" ></fa> by Martin Polak & Bruno Staub</span>
+        <a href="#"> mabrweb.com</a>
+      </div>
+      <!-- Copyright -->
+
     </div>
   </div>
 </footer>
