--- a/src/app/checkout/checkout-shipment/checkout-shipment.component.html
+++ b/src/app/checkout/checkout-shipment/checkout-shipment.component.html
@@ -1,8 +1,8 @@
-<h3>Versandart</h3>
+<h3 class="checkout-titel">Versandart</h3>
 
 <form [formGroup]="ShipmentForm" (ngSubmit)="onSubmit()">
 
-  <table class="table table-striped">
+  <table class="table table-striped checkout">
     <tbody>
     <tr>
       <td><input type="radio" value="express" name="shippingMethod" formControlName="shippingMethod"></td>
@@ -23,7 +23,7 @@
   </table>
 
 
-  <div class="row">
+  <div class="row checkout-button">
     <div class="col-12">
       <button type="button" class="checkoutaction btn btn-primary float-left mb-2" (click)="goBack()">zurück</button>
       <button type="submit" class="checkoutaction btn btn-primary float-right">Zahlart wählen</button>
