--- a/src/app/checkout/checkout-thx/checkout-thx.component.html
+++ b/src/app/checkout/checkout-thx/checkout-thx.component.html
@@ -8,7 +8,7 @@
 
   <br>
 
-  <div class="row">
+  <div class="row checkout-button">
   <div class="col-12">
       <button type="button" class="checkoutaction btn btn-primary float-right" (click)="onBackToShopping()">zum Shop</button>
     </div>
