--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-12">
 
-      <h3>Warenkorb</h3>
+      <h3 class="checkout-titel">Warenkorb</h3>
 
       <div class="table-responsive">
         <table class="order table table-striped">
