checkout/orderstyling improved

--- a/src/app/order/style/order.component.scss
+++ b/src/app/order/style/order.component.scss
@@ -28,6 +28,11 @@ table.table-striped > thead > tr > th{
 }
 
 
+h3.checkout-titel {
+  margin-top: 80px;
+  margin-bottom: 25px;
+}
+
 
 th.action{
   width: 9%;
