quick fix admin product/list/add/edit

--- a/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
+++ b/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
@@ -71,7 +71,7 @@
         <span class="button is-small btn-danger" (click)='deleteProduct()'>Löschen</span>
 
         <div>
-          <button class="btn btn-outline-success mt-3 mb-3" style="display: inline-block;" (click)='updateProduct(product)'>Speichern</button>
+          <button class="btn btn-info mt-3 mb-3" style="display: inline-block;" (click)='updateProduct(product)'>Speichern</button>
         </div>
 
       </div>
