footer tel link modifiziert

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -92,11 +92,6 @@
               Gebüren
             </a>
           </li>
-          <li class="sitemap-item">
-            <a class="social-link" href="https://instagram.com" target="_blank" tabindex="-1">
-            test
-            </a>
-          </li>
         </ul>
       </div>
 
@@ -109,7 +104,7 @@
 
         <li class="sitemap-item">
           <a class="sitemap-link" tabindex="-1">
-            +41 0794795169
+            <a href="tel:+41792678030">+41792678030</a>
           </a>
         </li>
 
@@ -126,10 +121,10 @@
         <a href="https://instagram.com" target="_blank" tabindex="-1" class="sitemap-link">
           <fa name="instagram mr-2" size="2x"></fa>
         </a>
-        <a href="https://youtube.com" target="_blank" tabindex="-1" class="sitemap-link">
+        <a href="https://twitter.com" target="_blank" tabindex="-1" class="sitemap-link">
           <fa name="twitter mr-2" size="2x"></fa>
         </a>
-        <a href="https://twitter.com" target="_blank" tabindex="-1" class="sitemap-link">
+        <a href="https://plus.google.com" target="_blank" tabindex="-1" class="sitemap-link">
           <fa name="google mr-2" size="2x"></fa>
         </a>
         <a href="https://facebook.com" target="_blank" tabindex="-1" class="sitemap-link">
