--- a/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
+++ b/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
@@ -1,18 +1,14 @@
-<div *ngIf="editState && productToEdit.key === product.key">
+<div *ngIf="editState && productToEdit.key === product.key" class="editstate">
   <form (ngSubmit)="updateProduct(product)">
 
     <div *ngIf="product" class="media">
       <img src="{{product.image || '//:0'}}" class="img-fluid" alt="Dummy Images" class="align-self-start mr-3" style="width:200px">
 
       <div class="media-body">
-
         <div>
           <label>Name: </label> <input type="text" [(ngModel)]="product.name" name="product">
         </div>
-        <!--<div>-->
-          <!--<label>Beschreibung: </label> <input type="text" [(ngModel)]="product.description" name="description">-->
-        <!--</div>-->
-        <p-editor [(ngModel)]="product.description" [style]="{'height':'320px'}" name="description"></p-editor>
+        <p-editor [(ngModel)]="product.description" [style]="{'height':'320px'}" name="description" class="description mt-3 mb-3 d-block"></p-editor>
         <div>
           <label>Preis: </label> <input type="number" [(ngModel)]="product.price" name="price">
         </div>
@@ -26,49 +22,67 @@
           [showUploadButton]="false"
           accept="image/*">
         </p-fileUpload>
-        <div *ngIf="(categories$ | async) as Cat">
+
+        <div *ngIf="(categories$ | async) as Cat" class="mt-4">
           <p-dropdown [options]="Cat" [(ngModel)]="selectedCategory" name="productCategory" placeholder="{{product.productCategory}}" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
         </div>
-        <div>
-          <label>TabTitel1: </label> <input type="text" [(ngModel)]="product.moreInfo1Title" name="moreInfo1Title">
+
+        <div class="form-group mt-4">
+          <p-checkbox binary="true" value="register" label="Register Laschen hinzufügen" [(ngModel)]="product.register" name="register"></p-checkbox>
         </div>
-        <div>
-          <p-editor [(ngModel)]="product.moreInfo1Text" [style]="{'height':'150px'}" name="moreInfo1Text"></p-editor>
+        <div *ngIf="product.register">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <label for="moreInfo1Title" class="col-form-label">RegisterTitel1</label>
+              <input type="text" class="form-control" pInputText placeholder="Register Namen..." required [(ngModel)]="product.moreInfo1Title" name="moreInfo1Title" id="moreInfo1Title">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="moreInfo2Title" class="col-form-label">RegisterTitel2</label>
+              <input type="text" class="form-control" pInputText placeholder="Register Namen..." required [(ngModel)]="product.moreInfo2Title" name="moreInfo2Title" id="moreInfo2Title">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="moreInfo3Title" class="col-form-label">RegisterTitel3</label>
+              <input type="text" class="form-control" pInputText placeholder="Register Namen..." required [(ngModel)]="product.moreInfo3Title" name="moreInfo3Title" id="moreInfo3Title">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <label for="moreInfo1Text" class="col-form-label">RegisterText1</label>
+              <p-editor [(ngModel)]="product.moreInfo1Text" [style]="{'height':'150px'}" name="moreInfo1Text" id="moreInfo1Text"></p-editor>
+            </div>
+            <div class="form-group col-md-4">
+              <label for="moreInfo2Text" class="col-form-label">RegisterText2</label>
+              <p-editor [(ngModel)]="product.moreInfo2Text" [style]="{'height':'150px'}" name="moreInfo2Text" id="moreInfo2Text"></p-editor>
+            </div>
+            <div class="form-group col-md-4">
+              <label for="moreInfo3Text" class="col-form-label">RegisterText3</label>
+              <p-editor [(ngModel)]="product.moreInfo3Text" [style]="{'height':'150px'}" name="moreInfo3Text" id="moreInfo3Text"></p-editor>
+            </div>
+          </div>
         </div>
+
         <div>
-          <label>TabTitel2: </label> <input type="text" [(ngModel)]="product.moreInfo2Title" name="moreInfo2Title">
-        </div>
-        <div>
-          <p-editor [(ngModel)]="product.moreInfo2Text" [style]="{'height':'150px'}" name="moreInfo2Text"></p-editor>
-        </div>
-        <div>
-          <label>TabTitel3: </label> <input type="text" [(ngModel)]="product.moreInfo3Title" name="moreInfo3Title">
-        </div>
-        <div>
-          <p-editor [(ngModel)]="product.moreInfo3Text" [style]="{'height':'150px'}" name="moreInfo3Text"></p-editor>
-        </div>
-        <div>
-          <label>Discount: </label> <p-checkbox binary="true" value="discount" label="Aktion" [(ngModel)]="product.discount" name="discount"></p-checkbox>
+          <p-checkbox binary="true" value="discount" label="Aktion" [(ngModel)]="product.discount" name="discount"></p-checkbox>
         </div>
         <div *ngIf="product.discount">
           <label>discountFactor: </label> <input type="number" [(ngModel)]="product.discountFactor" name="discountFactor">
         </div>
         <div>
-          <label>NewProduct: </label> <p-checkbox binary="true" value="newProduct" label="NewProdukt" [(ngModel)]="product.newProduct" name="newProduct"></p-checkbox>
+          <p-checkbox binary="true" value="newProduct" label="NewProdukt" [(ngModel)]="product.newProduct" name="newProduct"></p-checkbox>
         </div>
         <div>
-          <label>Bestrated: </label> <p-checkbox binary="true" value="bestRated" label="bestRated" [(ngModel)]="product.bestRated" name="bestRated"></p-checkbox>
+          <p-checkbox binary="true" value="bestRated" label="bestRated" [(ngModel)]="product.bestRated" name="bestRated"></p-checkbox>
         </div>
         <div>
           <label>bestRatedNumber: </label> <input type="number" [(ngModel)]="product.bestRatedNumber" name="bestRatedNumber">
         </div>
-        <span class="button is-small btn-primary" *ngIf='product.active' (click)='updateActive(false)'>inaktiv</span>
 
-        <span class="button is-small btn-primary" *ngIf='!product.active' (click)='updateActive(true)'>aktiv</span>
-
-        <span class="button is-small btn-secondary" (click)='editProduct($event, product)'>Editieren</span>
-
-        <span class="button is-small btn-danger" (click)='deleteProduct()'>Löschen</span>
+        <div class="button-group mt-3 mb-2">
+          <span class="button is-small btn-primary" *ngIf='product.active' (click)='updateActive(false)'>inaktiv</span>
+          <span class="button is-small btn-primary" *ngIf='!product.active' (click)='updateActive(true)'>aktiv</span>
+          <span class="button is-small btn-secondary" (click)='editProduct($event, product)'>Editieren</span>
+          <span class="button is-small btn-danger" (click)='deleteProduct()'>Löschen</span>
+        </div>
 
         <div>
           <button class="btn btn-info mt-3 mb-3" style="display: inline-block;" (click)='updateProduct(product)'>Speichern</button>
@@ -83,7 +97,7 @@
 </div>
 
 
-<div *ngIf="!editState">
+<div *ngIf="!editState" class="no-editstate">
 
   <div *ngIf="product" class="media">
     <img src="{{product.image || '//:0'}}" class="img-fluid" alt="Dummy Images" class="align-self-start mr-3" style="width:200px">
@@ -100,6 +114,9 @@
       </div>
       <div>
         <label>Kategorie: </label> {{product.productCategory}}
+      </div>
+      <div class="mt-3">
+        <label>Register anzeigen: </label> {{product.register}}
       </div>
       <div>
         <label>Tab1Titel: </label> {{product.moreInfo1Title}}
