loading gif disabled on detail page, slider links added

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -61,7 +61,7 @@
 </div>
 
 <ng-template #loading>
-  <div>Loading ...</div>
+  <!--<div><img src="assets/loading-150x150.gif" alt="loading gif"></div>-->
 </ng-template>
 
 <br>
